# Tofu

./: api-endpoint.txt  hardware-tofu.md  timeline.md
architectures/: ai-execution.md  architecture.md  interaction.md  mod-architecture.md  office-strategy.md  ota.md  server-architecture.md  serverside-caching.md  software-workflow.md  translation.md
features/: CMakeLists.txt
features/language_detection/: caching_strategy.md  fallback_mechanisms.md  language_detection.c  language_detection.h  local_algorithms.md  two_tier_approach.md
root/: README.md  main.c  partitions.csv
root/docs/: project_structure.md
root/firmware/: CMakeLists.txt
root/firmware/core/comm_manager/: CMakeLists.txt  comm_manager.h
root/firmware/core/hal/: hal.c  hal.h
root/firmware/core/system_manager/: feature_manager.h  firmware_config.h  system_manager.c  system_manager.h
root/firmware/features/translation_engine/: tcl_development_process.md  tcl_entry_manager.c  tcl_entry_manager.h  tcl_key_generator.c  tcl_key_generator.h  tcl_redis.c  tcl_redis.h  tcl_redis_schema.c  tcl_redis_schema.h  tcl_redis_types.h  tcl_state.c  tcl_state.h  tcl_storage.c  tcl_storage.h  translation_cache_layer.c  translation_cache_layer.h  translation_cache_layer_additional.c
root/firmware/features/voice_engine/: CMakeLists.txt  keyword_detect.c  keyword_detect.h  noise_suppress.c  noise_suppress.h  vad.c  vad.h
root/server/feature_services/translation_service/: .gitignore  README.md  jest.config.cjs  jest.setup.cjs  jest.setup.js  package.json  tsconfig.json
root/server/feature_services/translation_service/src/: config.ts  index.ts
root/server/feature_services/translation_service/src/__tests__/: integration.test.ts  languageDetection.test.ts  languageDetectionFallback.test.ts  setup.ts  simple.test.ts
root/server/feature_services/translation_service/src/services/: languageDetection.ts  languageDetectionFallback.ts
root/server/feature_services/translation_service/src/types/: dotenv.d.ts  franc.d.ts  global.d.ts  index.ts
